css fix for project image padding on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -185,7 +185,8 @@ h1 {
   #project-image {
     width: 350px;
     height: 250px;
-    margin: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     padding: 0;
     object-fit: cover;
   }
@@ -303,7 +304,8 @@ h1 {
   }
   .project-image {
     min-width: 200px;
-    margin: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
   }
 }
 
@@ -513,7 +515,8 @@ h1 {
   }
   #project-image {
     width: 400px;
-    margin: 1.5rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
   }
   /************ BLOG ***********/
 
